--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
 	],
 	"require" : {
 		"php" : ">=5.4",
-		"wabel/zoho-crm-orm": "~1.0"
+		"wabel/zoho-crm-orm": "~1.0",
+		"doctrine/dbal": "^2.8"
 	},
   "require-dev" : {
 	  "phpunit/phpunit": "~4.0",
-	  "satooshi/php-coveralls": "dev-master"
+	  "satooshi/php-coveralls": "~2.0"
 	},
 	"autoload" : {
 		"psr-4" : {
