--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
 	"require" : {
 		"php" : ">=5.4",
 		"ziack/zoho-crm-orm": "~1.1",
-		"doctrine/dbal": "^2.8"
+		"doctrine/dbal": "^2.8",
+		"kalfheim/sanitizer": "^1.0",
+		"daylerees/sanitizer": "^1.0"
 	},
   "require-dev" : {
 	  "phpunit/phpunit": "~4.0",
