--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"ziack/zoho-crm-orm": "~1.1",
 		"doctrine/dbal": "^2.8",
 		"kalfheim/sanitizer": "^1.0",
-		"daylerees/sanitizer": "^1.0"
+		"daylerees/sanitizer": "^1.0",
+		"neitanod/forceutf8": "~2.0"
 	},
   "require-dev" : {
 	  "phpunit/phpunit": "~4.0",
